fixed spacing issue

--- a/app/assets/stylesheets/components/_products.scss
+++ b/app/assets/stylesheets/components/_products.scss
@@ -184,6 +184,7 @@
         }
         > .well {
           margin-left: 0;
+          margin-bottom: 10px;
 
           > a {
             @include sidebar-subcategory-btn;
